Material, Building, and scrollbar fix
Added a scroll bar to the materials window

Added Buildings:
Carpentry - Automatic Sawmill
Flax - Flax Gin

Added Materials for the following buildings:
Flax Comb
Hand Loom
Improved Hackling Rack
Large Distaff
Steam Distaff
Carpentry Shop
Crafting Bench
Automatic Sawmill
Student Loom
Ant Colony
Grain Oven
Large Cheese Rack
Malting Tray
Papy Tank
Rabbit Hutch
Silkworm Farm
Beetle Terrarium
Small Cheese Rack
Glory Hole
Box Kiln
Pottery Deck
Pottery Wheel
Reinforced  Kiln
Steam Kiln
Vault Kiln
Barrel Vise
Wine Barrel
Small Distaff

Fixed Skills:
Sturdy Tub
Marble Tub

--- a/css/builder.css
+++ b/css/builder.css
@@ -31,7 +31,8 @@
 	right: 0px;
 	bottom: 0px;
 	border-right: none;
-	border-bottom-left-radius: 10px
+	border-bottom-left-radius: 10px;
+	overflow-y:  scroll;
 }
 #leftPanel {
 	position: absolute;
